--- a/_config.yml
+++ b/_config.yml
@@ -136,7 +136,7 @@ assets:
     enabled: true # boolean, keep empty means false
     # specify the Jekyll environment, empty means both
     # only works if `assets.self_host.enabled` is 'true'
-    env: development # [development | production]
+    env: # [development | production]
 
 pwa:
   enabled: true # The option for PWA feature (installable)
@@ -146,6 +146,7 @@ pwa:
     # Usually its value is the `baseurl` of another website that
     # shares the same domain name as the current website.
     deny_paths:
+      - "/"
       # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
 
 paginate: 10
