--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,15 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Bangkok
+
+# Ensure posts are shown automatically
+future: true
+show_drafts: false
+unpublished: false
+
+# Automatic regeneration
+regenerate: true
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -141,7 +149,7 @@ assets:
 pwa:
   enabled: true # The option for PWA feature (installable)
   cache:
-    enabled: true # The option for PWA offline cache
+    enabled: false # Disable PWA cache to ensure fresh content loads
     # Paths defined here will be excluded from the PWA cache.
     # Usually its value is the `baseurl` of another website that
     # shares the same domain name as the current website.
@@ -150,6 +158,16 @@ pwa:
       # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
 
 paginate: 10
+
+# Post ordering and display
+latest_posts_count: 10
+posts_per_page: 10
+
+# Ensure posts are processed in the correct order
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-feed
 
 # The base URL of your site
 baseurl: ""
